--- a/package.json
+++ b/package.json
@@ -40,12 +40,10 @@
     "@angular/platform-browser": "15.0.4",
     "@angular/platform-browser-dynamic": "15.0.4",
     "@angular/router": "15.0.4",
-    "@ngrx/component-store": "15.0.0",
-    "@ngrx/effects": "15.0.0",
-    "@ngrx/entity": "15.0.0",
-    "@ngrx/store": "15.0.0",
-    "@ngrx/store-devtools": "15.0.0",
     "@nrwl/angular": "15.4.4",
+    "@state-adapt/angular": "^0.61.0",
+    "@state-adapt/core": "^0.61.0",
+    "@state-adapt/rxjs": "^0.61.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
