--- a/package.json
+++ b/package.json
@@ -30,63 +30,64 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.0.4",
-    "@angular/cdk": "15.0.4",
-    "@angular/common": "15.0.4",
-    "@angular/compiler": "15.0.4",
-    "@angular/core": "15.0.4",
-    "@angular/forms": "15.0.4",
-    "@angular/material": "15.0.4",
-    "@angular/platform-browser": "15.0.4",
-    "@angular/platform-browser-dynamic": "15.0.4",
-    "@angular/router": "15.0.4",
-    "@nrwl/angular": "15.4.4",
-    "@state-adapt/angular": "^0.63.0",
-    "@state-adapt/core": "^0.63.0",
-    "@state-adapt/rxjs": "^0.63.0",
+    "@angular/animations": "16.0.6",
+    "@angular/cdk": "16.0.4",
+    "@angular/common": "16.0.6",
+    "@angular/compiler": "16.0.6",
+    "@angular/core": "16.0.6",
+    "@angular/forms": "16.0.6",
+    "@angular/material": "16.0.4",
+    "@angular/platform-browser": "16.0.6",
+    "@angular/platform-browser-dynamic": "16.0.6",
+    "@angular/router": "16.0.6",
+    "@nrwl/angular": "16.3.2",
+    "@state-adapt/angular": "^1.1.0",
+    "@state-adapt/core": "^1.1.0",
+    "@state-adapt/rxjs": "^1.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
-    "zone.js": "0.11.4"
+    "zone.js": "0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.0.4",
-    "@angular-eslint/eslint-plugin": "15.0.0",
-    "@angular-eslint/eslint-plugin-template": "15.0.0",
-    "@angular-eslint/template-parser": "15.0.0",
+    "@angular-devkit/build-angular": "16.0.6",
+    "@angular-eslint/eslint-plugin": "16.0.3",
+    "@angular-eslint/eslint-plugin-template": "16.0.3",
+    "@angular-eslint/template-parser": "16.0.3",
     "@angular/cli": "~15.0.0",
-    "@angular/compiler-cli": "15.0.4",
-    "@angular/language-service": "15.0.4",
+    "@angular/compiler-cli": "16.0.6",
+    "@angular/language-service": "16.0.6",
     "@hirez_io/observer-spy": "^2.1.0",
     "@nrwl/cli": "15.4.4",
-    "@nrwl/cypress": "15.4.4",
-    "@nrwl/eslint-plugin-nx": "15.4.4",
-    "@nrwl/jest": "15.4.4",
-    "@nrwl/linter": "15.4.4",
-    "@nrwl/workspace": "15.4.4",
-    "@types/jest": "28.1.8",
+    "@nrwl/cypress": "16.3.2",
+    "@nrwl/eslint-plugin-nx": "16.3.2",
+    "@nrwl/jest": "16.3.2",
+    "@nrwl/linter": "16.3.2",
+    "@nrwl/workspace": "16.3.2",
+    "@types/jest": "29.4.4",
     "@types/node": "14.14.33",
     "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "5.48.0",
-    "@typescript-eslint/parser": "5.48.0",
+    "@typescript-eslint/eslint-plugin": "5.59.11",
+    "@typescript-eslint/parser": "5.59.11",
     "cypress": "^11.0.0",
     "dotenv": "^10.0.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "28.1.3",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "12.2.3",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "jest-preset-angular": "13.1.1",
     "json-server": "^0.16.3",
-    "ng-packagr": "15.0.3",
-    "nx": "15.4.4",
+    "ng-packagr": "16.0.1",
+    "nx": "16.3.2",
+    "nx-cloud": "16.0.5",
     "postcss": "^8.3.9",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
     "postcss-url": "10.1.3",
     "prettier": "2.8.1",
-    "ts-jest": "28.0.8",
+    "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "4.8.4"
+    "typescript": "5.0.4"
   }
 }
