--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
+    "postinstall": "node ./decorate-angular-cli.js",
     "nx": "nx",
     "start": "ng serve earnings-app",
     "backend": "nx run earnings-app:backend",
@@ -74,10 +74,10 @@
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "29.4.3",
-    "jest-environment-jsdom": "29.4.3",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
     "jest-preset-angular": "13.1.1",
-    "json-server": "^0.16.3",
+    "json-server": "^0.17.3",
     "ng-packagr": "16.0.1",
     "nx": "16.3.2",
     "nx-cloud": "16.0.5",
