Upgrade StateAdapt, replace package-lock.json

--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "@angular/platform-browser-dynamic": "16.1.7",
     "@angular/router": "16.1.7",
     "@nrwl/angular": "16.5.5",
-    "@state-adapt/angular": "^1.2.0",
-    "@state-adapt/core": "^1.2.0",
-    "@state-adapt/rxjs": "^1.2.0",
+    "@state-adapt/angular": "2.0.0",
+    "@state-adapt/core": "2.0.0",
+    "@state-adapt/rxjs": "2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
